Fixed and finished

--- a/Final Exam Grade Table.html
+++ b/Final Exam Grade Table.html
@@ -52,3 +52,10 @@
 
       <tfoot>
         <tr>
+            <td colspan="2">Average Grade</td>
+            <td>78.8</td>
+        </tr>
+      </tfoot>
+    </table>
+  </body>
+</html>
